# RTLauncher

./: CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  resourcesDownloadAndUnzipped.cs  vite.config.ts
.github/workflows/: build.yml  build_macos_arm.yml  build_macos_intel.yml  build_ubuntu.yml
RTL/src-tauri/: Cargo.toml  tauri.conf.json
RTL/src-tauri/src/: main.rs
RTL/src-tauri/src/log/: info.rs
raw functions/: f01-Power.rs  file_list.md  login.rar
src/: App.vue  E-bus.ts  event.ts  nb.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: login.rs  mod.rs
src-tauri/src/log/: info.rs  mod.rs
src-tauri/src/module/: mod.rs
src-tauri/src/module/download/: decompression.rs  dwl_main.rs  mod.rs  paths.rs
src-tauri/src/module/start_game/: mod.rs  stg_main.rs
src-tauri/src/router/: mod.rs
src-tauri/src/utils/: export_bat.rs  get_java_path.rs  mod.rs  request.rs
src/modules/: anime_manager.ts  pub.ts  sub.ts
