[package]
name = "rtl-launcher"
version = "0.1.0"
description = "RTLauncher"
authors = ["Inteside"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rtl_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
tokio = { version = "1.43.0", features = ["full"] }
path-tree = "0.8.1"
url = "2.5.4"
rustls = "0.23.21"
open = "5.3.2"
rustls-pemfile = "2.2.0"
rcgen = "0.13.2"
rustls-pki-types = "1.11.0"
log = "0.4.25"
rmpv = "1.3.0"
futures = "0.3.31"
indicatif = "0.17.11"
futures-util = "0.3.31"
sha1 = "0.10.6"
rayon = "1.10.0"
zip = "2.2.2"

